--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -34,8 +34,8 @@ jobs:
       - name: run tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
-          api-level: 29
-          script: ./gradlew connectedCheck
+          api-level: 34
+#          script: ./gradlew connectedCheck
 
       - name: Build with Maven
         run: mvn test
