--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -35,10 +35,7 @@ jobs:
         uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: 34
-#          script: ./gradlew connectedCheck
-
-      - name: Build with Maven
-        run: mvn test
+          script: mvn test
 
       # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
       - name: Update dependency graph
