--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 		<carina-appcenter.version>1.1.4</carina-appcenter.version>
 		<java.version>11</java.version>
 		<zebrunner-agent.version>1.9.6</zebrunner-agent.version>
-		<suite>helloWorld</suite>
+		<suite>android</suite>
 	</properties>
 
 	<repositories>
@@ -158,7 +158,7 @@
 					<argLine>-javaagent:${project.build.directory}/agent/zebrunner-agent.jar</argLine>
 					<useSystemClassLoader>false</useSystemClassLoader>
 					<suiteXmlFiles>
-						<suiteXmlFile>${project.build.directory}/test-classes/testng_suites/${suite}.xml</suiteXmlFile>
+						<suiteXmlFile>${project.build.directory}/test-classes/suites/${suite}.xml</suiteXmlFile>
 					</suiteXmlFiles>
 				</configuration>
 			</plugin>
