--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -31,6 +31,11 @@ jobs:
       - name: checkout
         uses: actions/checkout@v3
 
+      - name: Start Appium
+        uses: appium/appium-android-driver@v1
+        with:
+        args: --port 4723
+
       - name: run tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
