--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -32,9 +32,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Start Appium
-        uses: appium/appium-android-driver@v1
-        with:
-          args: --port 4723
+        uses: moatazeldebsy/Appium-Server-GitHub-Action@V1.0.7
 
       - name: run tests
         uses: reactivecircus/android-emulator-runner@v2
