--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -31,10 +31,13 @@ jobs:
       - name: checkout
         uses: actions/checkout@v3
 
-      - name: Start Appium Server
-        uses: appium/appium-android-driver@v2.0
-        with:
-          args: --port 4723
+      - name: Install Appium Server
+        run: |
+         npm i --location=global appium
+
+      - name: Run Appium Server
+        run: |
+         appium
 
       - name: run tests
         uses: reactivecircus/android-emulator-runner@v2
