--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Run Appium Server
         run: |
-         appium
+         appium &
 
       - name: run tests
         uses: reactivecircus/android-emulator-runner@v2
