--- a/src/main/resources/_config.properties
+++ b/src/main/resources/_config.properties
@@ -50,12 +50,12 @@ init_retry_interval=1
 #============ Android Local Mobile ===================#
 selenium_url=http://localhost:4723
 capabilities.automationName=uiautomator2
-capabilities.deviceName=Nexus 6 API 29
+capabilities.deviceName=Nexus 6
 #capabilities.udid=<phone_udid>
 capabilities.deviceType=phone
 capabilities.platformName=ANDROID
 #capabilities.app=
-capabilities.chromedriverExecutable=/Users/solvd/Desktop/selenium/chromedriver_113.0.5672.63
+capabilities.chromedriverExecutable=/Users/solvd/Desktop/selenium/chromedriver_103
 
 #=====================================================#
 
